Shifted the frontend build environment. Some necessary build changes. Complains and numbers change request feature added. Added hwt authentication. Completed the pre reqs for the deployement